--- a/css/meu_estilo.css
+++ b/css/meu_estilo.css
@@ -16,3 +16,25 @@
     font-size: x-small;
     margin-bottom: auto;
 }
+
+.bg-topico {
+    background-color: rgba(68, 96, 69, 0.363);
+}
+
+.topico-titulo {
+    font-size: larger;
+    font-variant: small-caps;
+}
+
+.topico-utilizador {
+    background-color: rgb(220, 220, 220);
+}
+
+.topico-mensagem {
+    background-color: rgb(237, 237, 237);
+}
+
+.topico-icones {
+    max-width: 20px;
+    height: auto;
+}
